tests/sumo/output/e1/errors/pos_too_high/errors.sumo
Error: The position of e1Detector '4/1to3/1' lies beyond the lane's '4/1to3/1_0' end.
Quitting (on error).
